[package]
name = "sagbackend"
version = "0.1.0"
authors = ["Simon Schmitt <sls@sls.wtf>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]