[package]
name = "sagbackend"
version = "0.1.0"
authors = ["Simon Schmitt <sls@sls.wtf>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
rocket-multipart-form-data = "0.9.6"
r2d2 = "0.8"
r2d2-diesel = "1.0"

[replace]
"cookie:0.11.0" = { git = 'https://github.com/alexcrichton/cookie-rs.git' }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = true
features = ["handlebars_templates", "json"]